# disk-heating

./: alekik.py  alle.py  analytical_model.py  main.py  novy_kursach_3 (1).docx  novy_kursach_3.docx  pyproject.toml
